<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutPage.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_hui">


        <!-- TODO: Update blank fragment layout -->


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:orientation="horizontal"

            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/about_lang"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/language_light" />

            <Spinner
                android:id="@+id/language_spin"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:entries="@array/language"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:orientation="horizontal"

            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"

                android:text="@string/about_daytime"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/daytime_light" />

            <Spinner
                android:id="@+id/theme_spin"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:entries="@array/theme"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:orientation="horizontal"

            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textView_author"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"

                android:text="@string/about_text_aboutauthor"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/author_light" />

            <Button
                android:id="@+id/author_btn"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/right_light"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:orientation="horizontal"

            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textView_thanks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"

                android:text="@string/about_text_thanks"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/good_light" />

            <Button
                android:id="@+id/thanks_btn"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/right_light"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textView_check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/about_text_checknew"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/change" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/all_white"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="56dp"
                android:background="@color/background_hui"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="96dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/page_about"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>