<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.startPage.StartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/background_hui"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->

        <ProgressBar
            android:id="@+id/startPageLoading"
            android:layout_width="88dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:id="@+id/scroll_start"
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:background="@color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

        <TextView
            android:id="@+id/start_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:scrollbars="horizontal"
            android:scrollHorizontally="false"
            android:text="@string/omen_result"
            />
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/all_white"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="56dp"
                android:background="@color/background_hui"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:layout_width="320dp"
                android:layout_height="1dp"
                android:layout_marginBottom="24dp"
                android:background="@color/background_hui"
                app:layout_constraintBottom_toTopOf="@+id/start_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spin_user"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="104dp"
                android:background="@drawable/shape_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.421"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spin_config"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"

                android:layout_marginTop="72dp"
                android:background="@drawable/shape_radius"

                android:entries="@array/data"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_user" />

            <Spinner
                android:id="@+id/spin_map"
                android:layout_width="150dp"
                android:layout_height="50dp"

                android:layout_gravity="center"
                android:layout_marginTop="60dp"

                android:layout_marginEnd="32dp"
                android:background="@drawable/shape_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_user" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="96dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/start_startTitle"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/check_run_status_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/action_check_run_status"

                android:textColor="@color/cardview_dark_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/start_btn"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/btn_run"
                android:elevation="20dp"
                android:text="@string/action_start_run"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>