<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:paddingTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutPage.ThanksActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"

        android:layout_marginTop="32dp"
        android:background="@drawable/shape_radius"
        android:elevation="30dp"
        android:text="@string/thanks_total_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_radius"
        android:elevation="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/thanks_back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@color/transparent"
            android:drawableStart="@drawable/back_light"
            android:paddingStart="10dp"

            android:text="" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/thanks_thanks_text"
            android:textSize="30sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="48dp"
        android:elevation="20dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:layout_width="150dp"
            android:layout_height="32dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_radius"
            android:elevation="10dp"
            android:gravity="center"
            android:text="msojocs"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="32dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/shape_radius"
            android:elevation="10dp"
            android:gravity="center"
            android:text="jiyeme"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="32dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/shape_radius"
            android:elevation="10dp"
            android:gravity="center"
            android:text="jiyec"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="32dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/shape_radius"
            android:elevation="10dp"
            android:gravity="center"
            android:text="zhuwentao"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_radius"
            android:paddingStart="10dp"
            android:text="@string/thanks_autorun_title"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>